<resources>
    <string name="app_name">CalculatorApp</string>
    <!-- Number Buttons -->
    <string name="button_value_1">1</string>
    <string name="button_value_2">2</string>
    <string name="button_value_3">3</string>
    <string name="button_value_4">4</string>
    <string name="button_value_5">5</string>
    <string name="button_value_6">6</string>
    <string name="button_value_7">7</string>
    <string name="button_value_8">8</string>
    <string name="button_value_9">9</string>
    <string name="button_value_0">0</string>

    <!-- Operator Buttons -->
    <string name="button_value_dot">.</string>
    <string name="button_value_sub">-</string>
    <string name="button_value_div">/</string>
    <string name="button_value_mul">*</string>
    <string name="button_value_add">+</string>
    <string name="button_value_equal">=</string>
    <string name="button_value_C">C</string>
    <string name="button_value_right_bracket">)</string>
    <string name="button_value_left_bracket">(</string>
    <string name="history_button">History</string>
    <string name="button_del">Delete</string>
    <string name="history_text">Display History of Operations</string>
</resources>